--- a/hugomac/Info.plist
+++ b/hugomac/Info.plist
@@ -28,6 +28,11 @@
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>LSUIElement</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2015 Launch Apps. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
